# sigclean

./: LICENSE  README.md  pyproject.toml  setup.py  testcode.py
sigclean/: __init__.py  filters.py  plot.py  utils.py
tests/: test_filters.py
